--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -1,19 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
-    <style name="JuickStyle" parent="Theme.Sherlock.Light">
+
+    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+         <!-- snth -->
+    </style>
+
+    <style name="JuickStyle" parent="android:Theme.Light">
         <item name="android:actionBarStyle">@style/JuickStyle.ActionBar</item>
         <item name="actionBarStyle">@style/JuickStyle.ActionBar</item>
     </style>
 
-    <style name="JuickStyle.ActionBar" parent="Widget.Sherlock.Light.ActionBar.Solid">
+    <style name="JuickStyle.ActionBar" parent="android:style/Widget.Holo.Light.ActionBar.Solid">
         <item name="android:displayOptions">showHome|useLogo</item>
         <item name="displayOptions">showHome|useLogo</item>
     </style>
     
-    <style name="LinearLayout.PM" parent="Widget">
+    <style name="LinearLayout.PM" parent="android:style/Widget">
         <item name="android:background">#FFD0D0D0</item>    
     </style>
-    <style name="TextView.PMIn" parent="Widget">
+    <style name="TextView.PMIn" parent="android:style/Widget">
         <item name="android:textSize">7pt</item>
         <item name="android:background">@drawable/listitem_pmin</item>
         <item name="android:paddingTop">3dip</item>
@@ -25,7 +30,7 @@
         <item name="android:layout_marginBottom">5dip</item>
         <item name="android:layout_marginLeft">3dip</item>
     </style>
-    <style name="TextView.PMOut" parent="Widget">
+    <style name="TextView.PMOut" parent="android:style/Widget">
         <item name="android:textSize">7pt</item>
         <item name="android:background">@drawable/listitem_pmout</item>
         <item name="android:paddingTop">3dip</item>
