--- a/src/main/res/menu/main.xml
+++ b/src/main/res/menu/main.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:app="http://schemas.android.com/apk/res-auto"
-      xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+      xmlns:app="http://schemas.android.com/apk/res-auto">
     <item android:id="@+id/menuitem_newmessage"
         android:icon="@drawable/ic_action_edit"
         android:title="@string/Create"
@@ -8,5 +8,5 @@
     <item android:id="@+id/menuitem_preferences"
         android:icon="@android:drawable/ic_menu_preferences"
         android:title="@string/Settings"
-        app:showAsAction="never"/>
+        app:showAsAction="ifRoom"/>
 </menu>
