--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -1,24 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<resources>
-
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-         <!-- snth -->
+<resources xmlns:tools="http://schemas.android.com/tools">
+    <style name="JuickStyle" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:windowActionBar" tools:ignore="NewApi">false</item>
+        <item name="android:windowNoTitle" tools:ignore="NewApi">true</item>
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+        <item name="colorPrimary">#EEEEE6</item>
+        <item name="android:colorAccent" tools:ignore="NewApi">#1177AA</item>
+        <item name="colorAccent">#1177AA</item>
+        <item name="android:windowTranslucentStatus" tools:ignore="NewApi">true</item>
+        <item name="android:windowTranslucentNavigation" tools:ignore="NewApi">true</item>
+        <item name="android:colorButtonNormal" tools:ignore="NewApi">#DDDDD6</item>
+        <item name="colorButtonNormal">#DDDDD6</item>
     </style>
 
-    <style name="JuickStyle" parent="android:Theme.Light">
-        <item name="android:actionBarStyle">@style/JuickStyle.ActionBar</item>
-        <item name="actionBarStyle">@style/JuickStyle.ActionBar</item>
-    </style>
-
-    <style name="JuickStyle.ActionBar" parent="android:style/Widget.Holo.Light.ActionBar.Solid">
-        <item name="android:displayOptions">showHome|useLogo</item>
-        <item name="displayOptions">showHome|useLogo</item>
-    </style>
-    
-    <style name="LinearLayout.PM" parent="android:style/Widget">
+    <style name="LinearLayoutPM">
         <item name="android:background">#FFD0D0D0</item>    
     </style>
-    <style name="TextView.PMIn" parent="android:style/Widget">
+    <style name="TextViewPMIn" parent="">
         <item name="android:textSize">7pt</item>
         <item name="android:background">@drawable/listitem_pmin</item>
         <item name="android:paddingTop">3dip</item>
@@ -30,7 +29,7 @@
         <item name="android:layout_marginBottom">5dip</item>
         <item name="android:layout_marginLeft">3dip</item>
     </style>
-    <style name="TextView.PMOut" parent="android:style/Widget">
+    <style name="TextViewPMOut">
         <item name="android:textSize">7pt</item>
         <item name="android:background">@drawable/listitem_pmout</item>
         <item name="android:paddingTop">3dip</item>
